feat : add category swagger docummentation
